fix width overflow

--- a/html_version/scss/main.scss
+++ b/html_version/scss/main.scss
@@ -197,7 +197,7 @@ footer {
   border-top: #dddddd solid 1px;
   box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
   .wrap{
-    width: $wrapper_width;
+    max-width: $wrapper_width;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
